# my_big_dagster_project

./: .gitignore  dagster_cloud.yaml  dg.toml  pyproject.toml  workspace.yaml
.github/workflows/: dagster-plus-deploy.yml
deep_purple_location_1/: pyproject.toml
deep_purple_location_1/src/deep_purple_location_1/: definitions.py
deep_purple_location_1/src/deep_purple_location_1/defs/: assets.py  sensors.py
deep_purple_location_2/: pyproject.toml
deep_purple_location_2/src/deep_purple_location_2/: definitions.py
deep_purple_location_2/src/deep_purple_location_2/defs/: assets.py  sensors.py
deep_purple_location_3/: pyproject.toml
deep_purple_location_3/src/deep_purple_location_3/: definitions.py
deep_purple_location_3/src/deep_purple_location_3/defs/: assets.py  sensors.py
deep_purple_location_4/: pyproject.toml
deep_purple_location_4/src/deep_purple_location_4/: definitions.py
deep_purple_location_4/src/deep_purple_location_4/defs/: assets.py  sensors.py
deep_purple_location_5/: pyproject.toml
deep_purple_location_5/src/deep_purple_location_5/: definitions.py
deep_purple_location_5/src/deep_purple_location_5/defs/: assets.py  sensors.py
deep_purple_shared/: pyproject.toml
deep_purple_shared/src/deep_purple_shared/defs/: automation_conditions.py  sensors.py
deep_purple_shared/src/deep_purple_shared/utils/: constants.py  location_utils.py  performance_config.py
src/deep_purple/: definitions.py
src/deep_purple/defs/: sensors.py
src/deep_purple/defs/assets/: full_dag.py
src/deep_purple/utils/: constants.py  location_utils.py
src/deep_purple_location_1/defs/: assets.py  sensors.py
src/deep_purple_location_2/defs/: assets.py  sensors.py
src/deep_purple_location_3/defs/: assets.py  sensors.py
src/deep_purple_location_4/defs/: assets.py  sensors.py
src/deep_purple_location_5/defs/: assets.py  sensors.py
