[project]
name = "deep_purple"
requires-python = ">=3.11,<3.12"
version = "0.1.0"
dependencies = [
    "dagster==1.11.12",
    "dagster-cloud",
    "pandas",
    "pydantic",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
